config-root/namespaces/myapps/go-chaos/go-chaos-go-chaos-deploy.yaml
# Source: go-chaos/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-chaos-go-chaos
  labels:
    draft: draft-app
    chart: "go-chaos-0.0.3"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: myapps
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: go-chaos-go-chaos
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: go-chaos-go-chaos
    spec:
      serviceAccountName: go-chaos-go-chaos
      containers:
        - name: go-chaos
          image: "gcr.io/jenkins-x-labs-bdd1/go-chaos:0.0.3"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
